--- a/docker-compose/docker-compose-full-debug.yml
+++ b/docker-compose/docker-compose-full-debug.yml
@@ -10,6 +10,11 @@ services:
     networks:
       - ifs
     hostname: assessment-svc
+    ports:
+      - "8082:8080"
+      - "9002:8000"
+    environment:
+      - JAVA_OPTS=-Xmx300m -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8000,suspend=n
 
 
   competition-mgt-svc:
@@ -21,6 +26,11 @@ services:
     networks:
       - ifs
     hostname: competition-mgt-svc
+    environment:
+      - JAVA_OPTS=-Xmx300m -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8000,suspend=n
+    ports:
+      - "8083:8080"
+      - "9003:8000"
 
   project-setup-mgt-svc:
     image: innovateuk/project-setup-mgt-service
@@ -31,6 +41,11 @@ services:
     networks:
       - ifs
     hostname: project-setup-mgt-svc
+    ports:
+      - "8084:8080"
+      - "9004:8000"
+    environment:
+      - JAVA_OPTS=-Xmx300m -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8000,suspend=n
 
 
   project-setup-svc:
@@ -42,6 +57,11 @@ services:
     networks:
       - ifs
     hostname: project-setup-svc
+    ports:
+      - "8085:8080"
+      - "9005:8000"
+    environment:
+      - JAVA_OPTS=-Xmx300m -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8000,suspend=n
 
 
   front-door-svc:
@@ -53,4 +73,9 @@ services:
     networks:
       - ifs
     hostname: front-door-svc
+    ports:
+      - "8087:8080"
+      - "9007:8000"
+    environment:
+      - JAVA_OPTS=-Xmx300m -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8000,suspend=n
 
