--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -61,6 +61,7 @@ bootRun {
 
 ext {
     snippetsDir = file('build/generated-snippets')
+    ifsFinanceTotalsBaseURL = 'http://finance-data-service:8080'
 }
 
 jar {
