--- a/docker/ifs-mail-sink/build.gradle
+++ b/docker/ifs-mail-sink/build.gradle
@@ -4,3 +4,8 @@ tagDockerLocal.tag = mailSinkVersion
 osStageRemote.onlyIf { !isNamedEnv() }
 osStageRemote.tag = mailSinkVersion
 osStageLocal.tag = mailSinkVersion
+
+createContainer.hostName="mail"
+createContainer.containerName="mail"
+createContainer.containerId="mail"
+createContainer.portBindings = ['8765:8080',  "9876:8143"]
