--- a/gradle-support/openshift-build.gradle
+++ b/gradle-support/openshift-build.gradle
@@ -1,5 +1,8 @@
 import com.bmuschko.gradle.docker.tasks.image.*
+import com.bmuschko.gradle.docker.tasks.container.*
+import com.bmuschko.gradle.docker.tasks.container.extras.*
 apply plugin: com.bmuschko.gradle.docker.DockerRemoteApiPlugin
+apply plugin: com.bmuschko.gradle.docker.DockerJavaApplicationPlugin
 apply from: rootProject.file("gradle-support/openshift-methods.gradle")
 
 buildscript {
@@ -9,7 +12,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.bmuschko:gradle-docker-plugin:3.0.11"
+        classpath "com.bmuschko:gradle-docker-plugin:3.2.4"
     }
 }
 
@@ -23,6 +26,38 @@ task tagDocker(type: DockerTagImage) {
     imageId = buildDocker.getTag()
     repository = project.dockerRegistry + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
     tag = project.version
+}
+
+task stop(type: DockerStopContainer) {
+    targetContainerId { createContainer.getContainerId() }
+    onError {
+        //TODO maybe something smarter?
+        //Deliberately ignore
+    }
+}
+
+task removeContainer(type: DockerRemoveContainer, dependsOn: stop) {
+    targetContainerId { createContainer.getContainerId() }
+    onError {
+        //TODO maybe something smarter?
+        //Deliberately ignore
+    }
+}
+
+task createContainer(type: DockerCreateContainer, dependsOn: [buildDocker, removeContainer]) {
+    targetImageId { buildDocker.getImageId() }
+    containerName = "${project.name.replaceAll(/ifs-/, "")}"
+    containerId = "${project.name.replaceAll(/ifs-/, "")}"
+    network="ifs"
+}
+
+task deploy(type: DockerStartContainer, dependsOn: createContainer) {
+    targetContainerId { createContainer.getContainerId() }
+}
+
+
+task wait(type: DockerWaitHealthyContainer) {
+    targetContainerId { createContainer.getContainerId() }
 }
 
 task osStageRemote(type: DockerPushImage) {
