--- a/ifs-auth-service/ifs-idp-service/src/main/docker/Dockerfile-template
+++ b/ifs-auth-service/ifs-idp-service/src/main/docker/Dockerfile-template
@@ -1,4 +1,5 @@
 FROM debian:jessie-slim
+EXPOSE 9443
 
 ENV DEBIAN_FRONTEND=noninteractive \
   JAVAVER=8 \
@@ -144,4 +145,6 @@ RUN chown -R www-data:0 /opt/shibboleth-idp /usr/local/bin && \
   chmod -R u=rwX,g=rwX,o= /opt/shibboleth-idp /usr/local/bin
 
 #USER www-data
+HEALTHCHECK --interval=15s --timeout=8s \
+  CMD curl -k -f https://localhost:9443/idp/status || exit 1
 ENTRYPOINT [ "run-idp.sh" ]
