--- a/ifs-sil-stub/docker/Dockerfile-template
+++ b/ifs-sil-stub/docker/Dockerfile-template
@@ -8,4 +8,6 @@ VOLUME /tmp
 
 ADD ifs-sil-stub-@version@.jar app.jar
 
+HEALTHCHECK --interval=15s --timeout=8s \
+  CMD curl -f http://localhost:8080/monitoring/health || exit 1
 ENTRYPOINT exec java $JAVA_OPTS -jar app.jar
