--- a/ifs-web-service/docker/Dockerfile-template
+++ b/ifs-web-service/docker/Dockerfile-template
@@ -11,5 +11,6 @@ ADD newrelic.yml /
 ADD coscale-monitoring.sh /root/coscale-monitoring.sh
 ADD @app_name@-@version@.jar app.jar
 
-
+HEALTHCHECK --interval=15s --timeout=8s \
+CMD curl -f http://localhost:8080@server_context@/monitoring/health || exit 1
 ENTRYPOINT exec java -Dfile.encoding=UTF8 $JAVA_OPTS $JMX_OPTS -jar app.jar
