--- a/ifs-web-service/ifs-application-service/build.gradle
+++ b/ifs-web-service/ifs-application-service/build.gradle
@@ -11,6 +11,10 @@ osStageRemote.tag = applicationServiceVersion
 tagDockerLocal.tag = applicationServiceVersion
 osStageLocal.tag = applicationServiceVersion
 
+createContainer.hostName="application-svc"
+createContainer.containerName="application-svc"
+createContainer.containerId="application-svc"
+
 jar {
     baseName = 'ifs-application-service'
 }
