--- a/ifs-web-service/ifs-project-setup-mgt-service/build.gradle
+++ b/ifs-web-service/ifs-project-setup-mgt-service/build.gradle
@@ -8,6 +8,12 @@ osStageRemote.tag = projectSetupMgtServiceVersion
 tagDockerLocal.tag = projectSetupMgtServiceVersion
 osStageLocal.tag = projectSetupMgtServiceVersion
 
+createContainer.hostName="project-setup-mgt-svc"
+createContainer.containerName="project-setup-mgt-svc"
+createContainer.containerId="project-setup-mgt-svc"
+
+ext.serverContext = '/project-setup-management'
+
 dependencies {
     compile project(':ifs-web-service:ifs-web-core')
 
