--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@ include 'ifs-commons'
 include 'ifs-resources'
 include 'ifs-data-layer'
 include 'ifs-data-layer:ifs-data-service'
-include 'ifs-data-layer:ifs-finance-data-service'
+//include 'ifs-data-layer:ifs-finance-data-service'
 include 'ifs-sil-stub'
 include 'ifs-data-layer:data-service-commons'
 include 'ifs-data-layer:data-service-file'
