IFS-487 added error messages suggested by the content team

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -252,8 +252,10 @@ validation.publiccontent.contentgroup.heading.required=Please enter a heading.
 validation.publiccontent.contentgroup.content.required=Please enter content.
 
 validation.publiccontent.datesform.date.required=Please enter a valid date.
+validation.publiccontent.datesform.date.day=Please enter a valid day.
+validation.publiccontent.datesform.date.month=Please enter a valid month.
+validation.publiccontent.datesform.date.year=Please enter a valid year.
 validation.publiccontent.datesform.content.required=Please enter valid content.
-
 
 validation.nonifs.detailsform.opendate.required=Please enter an open date.
 validation.nonifs.detailsform.closedate.required=Please enter a competition close date.
