IFS-3059 Securing ifs-finance-data-service

--- a/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
@@ -99,6 +99,7 @@ ifs.data.service.token.email.validity.mins=1440
 
 ifs.finance-totals.enabled=${ifsFinanceTotalsEnabled}
 ifs.finance-totals.baseURL=${ifsFinanceTotalsBaseURL}
+ifs.finance-totals.authSecretKey=${ifsFinanceTotalsAuthSecretKey}
 
 ifs.system.name=Innovation Funding Service
 ifs.system.email.address=noreply-ifs@innovateuk.org
