--- a/ifs-data-layer/ifs-finance-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-finance-data-service/src/main/resources/application.properties
@@ -36,6 +36,7 @@ spring.datasource.validation-query=SELECT 1
 spring.profiles.active=${activeProfile}
 
 ifs.data.service.rest.baseURL=http://data-service:8080
+ifs.finance-totals.authSecretKey=${ifsFinanceTotalsAuthSecretKey}
 
 spring.application.name=IFS Finance Data Service
 
