IFS-3054 invitation to add and reject

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -156,6 +156,7 @@ validation.assessor.score.betweenZeroAndMax=The assessor score must be between 0
 validation.assessor.category.invalidCategory=Please select a research category.
 
 validation.panelinvitedecision.required=Please indicate your decision.
+validation.interviewinvitedecision.required=Please indicate your decision.
 validation.panelrejectionresource.rejectReason.required=The reason cannot be blank.
 validation.rejectpanelform.rejectReason.required=The reason cannot be blank.
 
