--- a/ifs-web-service/ifs-competition-mgt-service/build.gradle
+++ b/ifs-web-service/ifs-competition-mgt-service/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     testCompile project(":ifs-commons").sourceSets.test.output
     testCompile project(':ifs-web-service:ifs-web-core').sourceSets.test.output
 
+    testCompile 'org.assertj:assertj-core:3.9.0'
     testCompile "com.openpojo:openpojo:0.8.6"
     testCompile "org.skyscreamer:jsonassert:1.5.0"
     testCompile "net.sf.opencsv:opencsv:2.3"
