--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -488,6 +488,9 @@ competition.setup.invalid.assessor.count=Invalid number of assessors
 competition.setup.invalid.comp.exec=The selected user is not a Portfolio Manager.
 competition.setup.invalid.comp.technologist=The selected user is not an Innovation Lead
 competition.management.limit.warning=Please filter to allow you to select all.
+competition.setup.applicationdetails.max.projectduration-=Please fill in the maximum project duration.
+competition.setup.applicationdetails.min.projectduration-=Please fill in the minimum project duration.
+competition.setup.applicationdetails.min.projectduration.larger=The minimum project duration cannot be equal to or exceed the maximum project duration.
 
 SPEND_PROFILE_CANNOT_BE_GENERATED_UNTIL_ALL_FINANCE_CHECKS_APPROVED_OR_NOT_APPLICABLE=A spend profile cannot be generated until all viability checks are complete.
 SPEND_PROFILE_TOTAL_FOR_ALL_MONTHS_DOES_NOT_MATCH_ELIGIBLE_TOTAL_FOR_SPECIFIED_CATEGORY=Spend Profile: The total for all months does not match the eligible total for category: {0}
