--- a/docker/ifs-mysql/build.gradle
+++ b/docker/ifs-mysql/build.gradle
@@ -1,48 +1,53 @@
-def sqlVersion="5.6.29"
-apply from: rootProject.file("gradle-support/openshift-methods.gradle")
-apply from: rootProject.file("gradle-support/openshift-build.gradle")
-buildDocker.tag = "innovateuk/ifs-mysql:" + sqlVersion
 
-tagDocker.onlyIf{ !isNamedEnv() }
-tagDocker.repository = project.dockerRegistry + "/" + openshiftEnv + "/ifs-mysql"
-tagDocker.imageId = "innovateuk/ifs-mysql:" + sqlVersion
-tagDocker.tag = sqlVersion
+subprojects {
 
-tagDockerLocal.imageId = "innovateuk/ifs-mysql:" + sqlVersion
-tagDockerLocal.tag = sqlVersion
-tagDockerLocal {
-    doFirst {
-        repository = getLocalOCCredentials().url + "/" + openshiftEnv + "/ifs-mysql"
-        tag = sqlVersion
+
+    apply from: rootProject.file("gradle-support/openshift-methods.gradle")
+    apply from: rootProject.file("gradle-support/openshift-build.gradle")
+
+    buildDocker.inputDir = project.file("$project.parent.projectDir/docker/")
+
+
+    def sqlVersion = "5.6.29"
+    buildDocker.tag = "innovateuk/ifs-mysql:" + sqlVersion
+
+    tagDocker.onlyIf { !isNamedEnv() }
+    tagDocker.repository = project.dockerRegistry + "/" + openshiftEnv + "/ifs-mysql"
+    tagDocker.imageId = "innovateuk/ifs-mysql:" + sqlVersion
+    tagDocker.tag = sqlVersion
+
+    tagDockerLocal.imageId = "innovateuk/ifs-mysql:" + sqlVersion
+    tagDockerLocal.tag = sqlVersion
+    tagDockerLocal {
+        doFirst {
+            repository = getLocalOCCredentials().url + "/" + openshiftEnv + "/ifs-mysql"
+            tag = sqlVersion
+        }
     }
+
+    osStageRemote.onlyIf { !isNamedEnv() }
+    osStageRemote.imageName = getRemoteOCCredentials().url + "/" + openshiftEnv + "/ifs-mysql"
+    osStageRemote.tag = sqlVersion
+
+    osStageLocal.tag = sqlVersion
+    osStageLocal {
+        doFirst {
+            registryCredentials = getLocalOCCredentials()
+            imageName = registryCredentials.url + "/" + openshiftEnv + "/ifs-mysql"
+        }
+    }
+
+
+    List<String> cmd = new ArrayList<>();
+    cmd.add("--character-set-server=utf8, --collation-server=utf8_bin")
+
+    createContainer.cmd = cmd
+//    createContainer.enabled=false
+//    deploy.enabled=false
+//    wait.enabled=false
+
 }
 
-List<String> env = new ArrayList();
-env.add("MYSQL_ROOT_PASSWORD=password")
-env.add("MYSQL_DATABASE=ifs")
-
-List<String> cmd = new ArrayList<>();
-cmd.add("--character-set-server=utf8, --collation-server=utf8_bin")
-
-
-createContainer.containerName = "ifs-database"
-createContainer.containerId = "ifs-database"
-createContainer.env= env
-createContainer.cmd = cmd
-createContainer.portBindings = ['3306:3306']
-createContainer.hostName="ifs-database"
-
-osStageRemote.onlyIf { !isNamedEnv() }
-osStageRemote.imageName = getRemoteOCCredentials().url + "/" + openshiftEnv + "/ifs-mysql"
-osStageRemote.tag = sqlVersion
-
-osStageLocal.tag = sqlVersion
-osStageLocal {
-    doFirst {
-        registryCredentials = getLocalOCCredentials()
-        imageName = registryCredentials.url + "/" + openshiftEnv + "/ifs-mysql"
-    }
-}
 
 
 
