IFS-3059 Moving finance secret key to build.gradle

--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -59,6 +59,7 @@ bootRun {
 ext {
     snippetsDir = file('build/generated-snippets')
     ifsFinanceTotalsBaseURL = 'http://finance-data-service:8080'
+    ifsFinanceTotalsAuthSecretKey = 'supersecretkey'
 }
 
 configurations {
