IFS-3054 added unit tests and fixed already replied to invitation error

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -156,6 +156,7 @@ validation.assessor.score.betweenZeroAndMax=The assessor score must be between 0
 validation.assessor.category.invalidCategory=Please select a research category.
 
 validation.panelinvitedecision.required=Please indicate your decision.
+validation.interviewinvitedecision.required=Please indicate your decision.
 validation.panelrejectionresource.rejectReason.required=The reason cannot be blank.
 validation.rejectpanelform.rejectReason.required=The reason cannot be blank.
 
@@ -379,6 +380,8 @@ COMPETITION_CANNOT_RELEASE_FEEDBACK=We are unable to release feedback.
 ASSESSMENT_PANEL_INVITE_CLOSED=You have already accepted or rejected this invitation.
 ASSESSMENT_PANEL_INVITE_EXPIRED=This invitation has expired.
 ASSESSMENT_PANEL_INVITE_ALREADY_SENT=This invitation has already been sent
+INTERVIEW_PANEL_INVITE_CLOSED=You have already accepted or rejected this invitation.
+INTERVIEW_PANEL_INVITE_EXPIRED=This invitation has expired.
 
 #
 # Project Setup
