--- a/ifs-data-layer/ifs-finance-data-service/build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/build.gradle
@@ -17,6 +17,12 @@ osStageRemote.tag = financeDataServiceVersion
 tagDockerLocal.tag = financeDataServiceVersion
 osStageLocal.tag = financeDataServiceVersion
 
+deploy.dependsOn ":docker:ifs-mysql:ifs-finance-database:deploy"
+
+List<String> networkAliases = new ArrayList<>()
+networkAliases.add("ifs-finance-data-service")
+createContainer.networkAliases=networkAliases
+
 ext.dockerDir = "$project.parent.projectDir/docker/"
 ext.sqlContainer = "ifs-finance-database"
 ext.testSchema = "ifs_finance_test"
