--- a/settings.gradle
+++ b/settings.gradle
@@ -2,13 +2,14 @@ include 'docker:oracle-jre'
 include 'docker:app-base-image'
 include 'docker:ifs-mysql'
 include 'docker:ifs-mysql:ifs-database'
+include 'docker:ifs-mysql:ifs-finance-database'
 include 'docker:ifs-mail-sink'
 include 'docker:ifs-mysql-client'
 include 'ifs-commons'
 include 'ifs-resources'
 include 'ifs-data-layer'
 include 'ifs-data-layer:ifs-data-service'
-//include 'ifs-data-layer:ifs-finance-data-service'
+include 'ifs-data-layer:ifs-finance-data-service'
 include 'ifs-sil-stub'
 include 'ifs-data-layer:data-service-commons'
 include 'ifs-data-layer:data-service-file'
