IFS-3054 code tidy

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -380,6 +380,9 @@ COMPETITION_CANNOT_RELEASE_FEEDBACK=We are unable to release feedback.
 ASSESSMENT_PANEL_INVITE_CLOSED=You have already accepted or rejected this invitation.
 ASSESSMENT_PANEL_INVITE_EXPIRED=This invitation has expired.
 ASSESSMENT_PANEL_INVITE_ALREADY_SENT=This invitation has already been sent
+INTERVIEW_PANEL_PARTICIPANT_CANNOT_REJECT_UNOPENED_INVITE=You are unable to access this page. Please contact Innovate UK.
+INTERVIEW_PANEL_PARTICIPANT_CANNOT_REJECT_ALREADY_ACCEPTED_INVITE=You have already accepted the invitation to assess this interview. Please contact Innovate UK if you still want to reject.
+INTERVIEW_PANEL_PARTICIPANT_CANNOT_REJECT_ALREADY_REJECTED_INVITE=You have already rejected the invitation for this interview.
 INTERVIEW_PANEL_INVITE_CLOSED=You have already accepted or rejected this invitation.
 INTERVIEW_PANEL_INVITE_EXPIRED=This invitation has expired.
 
