outputs defined for auth service prepareDocker tasks

--- a/ifs-auth-service/ifs-idp-service/build.gradle
+++ b/ifs-auth-service/ifs-idp-service/build.gradle
@@ -93,6 +93,8 @@ task prepareDockerFile {
             into inputDir
         }
     }
+
+    outputs.dir inputDir
 }
 
 buildDocker.dependsOn prepareDockerFile
