--- a/ifs-auth-service/ifs-ldap-service/build.gradle
+++ b/ifs-auth-service/ifs-ldap-service/build.gradle
@@ -32,6 +32,7 @@ task prepareDockerFile {
             into "${inputDir}/scripts"
         }
     }
+    outputs.dir inputDir
 }
 
 buildDocker.dependsOn prepareDockerFile
