--- a/ifs-auth-service/ifs-sp-service/build.gradle
+++ b/ifs-auth-service/ifs-sp-service/build.gradle
@@ -46,6 +46,7 @@ task prepareDockerFile {
             into "${inputDir}/certs"
         }
     }
+    outputs.dir inputDir
 }
 
 buildDocker.dependsOn prepareDockerFile
