IFS-2891 Added new os-files config file and corrected docker compose file

--- a/docker-compose/docker-compose-prototypes.yml
+++ b/docker-compose/docker-compose-prototypes.yml
@@ -3,7 +3,7 @@ services:
 
   prototypes:
     hostname: prototypes
-    image: innovateuk/prototypes
+    image: innovateuk/prototypes-service
     ports:
       - "1234:8080"
     networks:
