IFS-2920-Proj-Location-Per-Partner
View Changes and properties file.

Change-Id: I0f12b35c1f4cd9569a7e3c3f76a6d5061531ca80

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -185,6 +185,8 @@ validation.projectdetailsaddressviewmodelform.organisationaddresstype.required=Y
 
 validation.financecontactform.financecontact.required=You need to select a finance contact before you can continue.
 
+validation.partnerprojectlocationform.postcode.required=You need to enter a postcode before you can continue.
+
 validation.projectmanagerform.projectmanager.required=You need to select a Project Manager before you can continue.
 
 validation.eligibilityform.multiplestream.required=Please select a stream option.
