IFS-2891 Added prototypes service entry to shibboleth

--- a/docker-compose/docker-compose-prototypes.yml
+++ b/docker-compose/docker-compose-prototypes.yml
@@ -2,8 +2,12 @@ version: '3'
 services:
 
   prototypes:
-    hostname: prototypes
+    hostname: prototypes-svc
     image: innovateuk/prototypes-service
+    healthcheck:
+       test: ["CMD", "curl", "-f",  "http://localhost:8080/monitoring/health"]
+       interval: 15s
+       timeout: 8s
     ports:
       - "1234:8080"
     networks:
