IFS-2684 added validation to send

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -263,6 +263,7 @@ validation.nonifs.detailsform.registrationclosedate.required=Please enter a regi
 validation.nonifs.detailsform.url.required=Please enter a competition URL.
 validation.nonifs.detailsform.yyyy.range.format=Please enter a year between 2000 and 9999.
 
+validation.inviteAssessors.subject.required=Please enter a subject for the email.
 
 validation.inviteNewAssessorsForm.selectedInnovationArea.required=Please enter an innovation sector and area.
 validation.inviteNewAssessorsForm.invites.required=Please add at least one person to invite.
