--- a/docker-compose/docker-compose-prototypes.yml
+++ b/docker-compose/docker-compose-prototypes.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
 
-  prototypes:
+  prototypes-svc:
     hostname: prototypes-svc
     image: innovateuk/prototypes-service
     healthcheck:
