--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -162,6 +162,7 @@ validation.rejectpanelform.rejectReason.required=The reason cannot be blank.
 # Validation specific to Application Form process for Applicants
 validation.project.name.must.not.be.empty=Please enter the full title of the project.
 validation.project.duration.range.invalid=Your project should last between 1 and 36 months.
+validation.project.duration.input.invalid=Your project should last between {0} and {1} months.
 validation.project.duration.value.invalid=Please enter a valid value.
 validation.project.start.date.not.in.future=Please enter a future date.
 validation.project.start.date.is.valid.date=Please enter a valid date.
