IFS-2891 Fix typo in docker-compose

--- a/gradle-support/docker-compose.gradle
+++ b/gradle-support/docker-compose.gradle
@@ -51,7 +51,7 @@ dockerCompose {
         useComposeFiles.add('docker-compose/docker-compose-finance-totals.yml')
     }
 
-    if (project.property('ifs.prototypes.enabled') ? project.property('ifs.prototypes.enabled').toBoolean() : false) {
+    if (project.hasProperty('ifs.prototypes.enabled') ? project.property('ifs.prototypes.enabled').toBoolean() : false) {
         useComposeFiles.add('docker-compose/docker-compose-prototypes.yml')
     }
 
