Docker tasks are run conditionally.

--- a/docker/ifs-mysql/ifs-database/build.gradle
+++ b/docker/ifs-mysql/ifs-database/build.gradle
@@ -15,6 +15,13 @@ createContainer.cmd = cmd
 createContainer.portBindings = ['3306:3306']
 createContainer.hostName="ifs-database"
 
+def enabled = project.hasProperty('ifs.data-service.enabled') ? project.property('ifs.data-service.enabled').toBoolean() : true
+stop.enabled = enabled
+removeContainer.enabled = enabled
+buildDocker.enabled = enabled
+createContainer.enabled = enabled
+deploy.enabled =enabled
+wait.enabled = enabled
 
 
 
