--- a/ifs-data-layer/ifs-finance-data-service/build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/build.gradle
@@ -17,6 +17,14 @@ osStageRemote.tag = financeDataServiceVersion
 tagDockerLocal.tag = financeDataServiceVersion
 osStageLocal.tag = financeDataServiceVersion
 
+def enabled = project.hasProperty('ifs.finance-data-service.enabled') ? project.property('ifs.finance-data-service.enabled').toBoolean() : true
+stop.enabled = enabled
+removeContainer.enabled = enabled
+buildDocker.enabled = enabled
+createContainer.enabled = enabled
+deploy.enabled =enabled
+wait.enabled = enabled
+
 deploy.dependsOn ":docker:ifs-mysql:ifs-finance-database:deploy"
 
 List<String> networkAliases = new ArrayList<>()
