--- a/ifs-web-service/ifs-assessment-service/build.gradle
+++ b/ifs-web-service/ifs-assessment-service/build.gradle
@@ -12,6 +12,14 @@ createContainer.hostName="assessment-svc"
 createContainer.containerName="assessment-svc"
 createContainer.containerId="assessment-svc"
 
+def enabled = project.hasProperty('ifs.assessment-service.enabled') ? project.property('ifs.assessment-service.enabled').toBoolean() : true
+stop.enabled = enabled
+removeContainer.enabled = enabled
+buildDocker.enabled = enabled
+createContainer.enabled = enabled
+deploy.enabled =enabled
+wait.enabled = enabled
+
 ext.serverContext = '/assessment'
 
 dependencies {
