--- a/ifs-web-service/ifs-competition-mgt-service/build.gradle
+++ b/ifs-web-service/ifs-competition-mgt-service/build.gradle
@@ -8,6 +8,14 @@ createContainer.hostName="competition-mgt-svc"
 createContainer.containerName="competition-mgt-svc"
 createContainer.containerId="competition-mgt-svc"
 
+def enabled = project.hasProperty('ifs.competition-mgt-service.enabled') ? project.property('ifs.competition-mgt-service.enabled').toBoolean() : true
+stop.enabled = enabled
+removeContainer.enabled = enabled
+buildDocker.enabled = enabled
+createContainer.enabled = enabled
+deploy.enabled =enabled
+wait.enabled = enabled
+
 ext.serverContext = '/management'
 
 dependencies {
