--- a/ifs-web-service/ifs-front-door-service/build.gradle
+++ b/ifs-web-service/ifs-front-door-service/build.gradle
@@ -12,6 +12,14 @@ osStageRemote.tag = frontDoorServiceVersion
 tagDockerLocal.tag = frontDoorServiceVersion
 osStageLocal.tag = frontDoorServiceVersion
 
+def enabled = project.hasProperty('ifs.front-door-service.enabled') ? project.property('ifs.front-door-service.enabled').toBoolean() : true
+stop.enabled = enabled
+removeContainer.enabled = enabled
+buildDocker.enabled = enabled
+createContainer.enabled = enabled
+deploy.enabled =enabled
+wait.enabled = enabled
+
 createContainer.hostName="front-door-svc"
 createContainer.containerName="front-door-svc"
 createContainer.containerId="front-door-svc"
