--- a/ifs-web-service/ifs-project-setup-service/build.gradle
+++ b/ifs-web-service/ifs-project-setup-service/build.gradle
@@ -9,6 +9,14 @@ createContainer.hostName="project-setup-svc"
 createContainer.containerName="project-setup-svc"
 createContainer.containerId="project-setup-svc"
 
+def enabled = project.hasProperty('ifs.project-setup-service.enabled') ? project.property('ifs.project-setup-service.enabled').toBoolean() : true
+stop.enabled = enabled
+removeContainer.enabled = enabled
+buildDocker.enabled = enabled
+createContainer.enabled = enabled
+deploy.enabled =enabled
+wait.enabled = enabled
+
 ext.serverContext = '/project-setup'
 
 dependencies {
