--- a/gradle-support/non-named-env-properties.gradle
+++ b/gradle-support/non-named-env-properties.gradle
@@ -47,4 +47,6 @@ ext.SHIB_ADDRESS=project.properties['openshiftEnv']+".apps."+project.properties[
 ext.MAIL_ADDRESS="mail-"+project.properties['openshiftEnv']+".apps."+project.properties['CLUSTER_ADDRESS']
 ext.ADMIN_ADDRESS="admin-"+project.properties['openshiftEnv']+".apps."+project.properties['CLUSTER_ADDRESS']
 
+ext.PROTOTYPES_ADDRESS="prototypes-"+project.properties['openshiftEnv']+".apps."+project.properties['CLUSTER_ADDRESS']
+
 ext.FILE_UPLOAD_CLAIM="file-upload-claim"
