--- a/os-files/46-prototypes-service.yml
+++ b/os-files/46-prototypes-service.yml
@@ -94,3 +94,17 @@ items:
       deploymentconfig: prototypes-svc
   status:
     loadBalancer: {}
+- apiVersion: v1
+  kind: Route
+  metadata:
+    name: prototypes
+  spec:
+    host: "${PROTOTYPES_ADDRESS}"
+    port:
+      targetPort: 443-tcp
+    tls:
+      termination: passthrough
+      insecureEdgeTerminationPolicy: Redirect
+    to:
+      kind: Service
+      name: prototypes
