IFS-2864 updated validation

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -264,6 +264,7 @@ validation.nonifs.detailsform.url.required=Please enter a competition URL.
 validation.nonifs.detailsform.yyyy.range.format=Please enter a year between 2000 and 9999.
 
 validation.inviteAssessors.subject.required=Please enter a subject for the email.
+validation.inviteAssessors.invites.required=Please add at least one person to invite.
 
 validation.inviteNewAssessorsForm.selectedInnovationArea.required=Please enter an innovation sector and area.
 validation.inviteNewAssessorsForm.invites.required=Please add at least one person to invite.
@@ -277,6 +278,7 @@ error.competitionAssessmentInvite.create.failed=Could not invite assessor with e
 email.already.in.invite=You have used this email address for another applicant.
 
 mark.as.complete.invalid.data.exists=Please enter valid data before marking a question as complete.
+
 
 #Generic type mismatch errors
 typeMismatch.java.lang.Integer=This field can only accept whole numbers.
