--- a/docker/ifs-mysql/build.gradle
+++ b/docker/ifs-mysql/build.gradle
@@ -1,4 +1,3 @@
-
 subprojects {
 
 
@@ -42,9 +41,35 @@ subprojects {
     cmd.add("--character-set-server=utf8, --collation-server=utf8_bin")
 
     createContainer.cmd = cmd
-//    createContainer.enabled=false
-//    deploy.enabled=false
-//    wait.enabled=false
+
+    createContainer.enabled = true
+    deploy.enabled = false
+    wait.enabled = true
+    stop.enabled = true
+    removeContainer.enabled = true
+
+
+    task createTestSchema(type: Exec) {
+        doFirst {
+            commandLine 'docker', 'exec', '-d', sqlContainer, 'mysql', '-uroot', '-ppassword', '-e', 'create database if not exists ' + testSchema
+        }
+    }
+
+    task startMySql(dependsOn: deploy) {
+        doLast {
+            exec {
+                //wait for sql container to start.
+                workingDir '.'
+                commandLine 'sleep', '10'
+            }
+        }
+    }
+
+    task initDB {
+        createTestSchema.mustRunAfter startMySql
+        dependsOn startMySql
+        dependsOn createTestSchema
+    }
 
 }
 
