--- a/docker/ifs-mysql/ifs-database/build.gradle
+++ b/docker/ifs-mysql/ifs-database/build.gradle
@@ -1,4 +1,5 @@
-
+ext.sqlContainer = "ifs-database"
+ext.testSchema = "ifs_test"
 
 List<String> env = new ArrayList();
 env.add("MYSQL_ROOT_PASSWORD=password")
