--- a/docker/ifs-mysql/build.gradle
+++ b/docker/ifs-mysql/build.gradle
@@ -44,6 +44,13 @@ subprojects {
 
     createContainer.enabled = true
     deploy.enabled = false
+
+    buildDocker.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+    stop.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+    removeContainer.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+    createContainer.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+    deploy.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+
     wait.enabled = true
     stop.enabled = true
     removeContainer.enabled = true
