--- a/ifs-auth-service/build.gradle
+++ b/ifs-auth-service/build.gradle
@@ -17,6 +17,12 @@ subprojects {
     buildDocker.inputDir=file("${project.buildDir}/docker")
     tagDocker.imageId="innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
 
+    buildDocker.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+    stop.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+    removeContainer.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+    createContainer.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+    deploy.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+
 }
 
 buildscript {
