IFS-2993 Pact conract test to verify integration between ifs-data-service and ifs-finance-data-service.

--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -110,6 +110,7 @@ dependencies {
     testCompile "org.skyscreamer:jsonassert:1.3.0"
     testCompile 'org.powermock:powermock-api-mockito:1.6.5'
     testCompile 'org.powermock:powermock-module-junit4:1.6.5'
+    testCompile 'au.com.dius:pact-jvm-consumer-junit_2.12:3.5.13'
 }
 
 test {
@@ -121,9 +122,11 @@ test {
     if (project.hasProperty('testGroups')) {
         systemProperty 'testGroups', project.getProperty('testGroups')
     }
+
+    systemProperty 'pact.rootDir', project.getProperty('pactDir')
+
     finalizedBy asciidoctor
 }
-
 
 asciidoctor {
     dependsOn test
