--- a/ifs-data-layer/build.gradle
+++ b/ifs-data-layer/build.gradle
@@ -6,6 +6,7 @@ subprojects {
 
 ext {
     snippetsDir = file('build/generated-snippets')
+    pactDir = file('build/pacts')
     javaLanguageLevel = 1.8
     generatedMapperSourcesDir = 'build/classes/main/org/innovateuk/ifs/mappers'
 }
