--- a/ifs-data-layer/ifs-data-service/src/test/resources/application-integration-test.properties
+++ b/ifs-data-layer/ifs-data-service/src/test/resources/application-integration-test.properties
@@ -31,6 +31,8 @@ ifs.system.email.address=noreply-innovateuk@example.com
 
 ifs.web.baseURL=${ifsWebBaseURL}
 
+ifs.finance-totals.baseURL=http://localhost:8080
+
 spring.sleuth.enabled=false
 spring.zipkin.enabled=false
 
