Changing spring version to snpashot to try fix for SPR-16526

--- a/gradle-support/java-spring-boot.gradle
+++ b/gradle-support/java-spring-boot.gradle
@@ -82,6 +82,7 @@ dependencyManagement {
 
 repositories {
     maven { url "https://repo.spring.io/milestone" }
+    maven { url "https://repo.spring.io/snapshot" }
     mavenCentral()
 }
 
