--- a/docker/ifs-mail-sink/build.gradle
+++ b/docker/ifs-mail-sink/build.gradle
@@ -10,3 +10,9 @@ createContainer.hostName="mail"
 createContainer.containerName="mail"
 createContainer.containerId="mail"
 createContainer.portBindings = ['8765:8080',  "9876:8143"]
+
+buildDocker.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+stop.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+removeContainer.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+createContainer.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+deploy.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
