--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -279,6 +279,7 @@ email.already.in.invite=You have used this email address for another applicant.
 mark.as.complete.invalid.data.exists=Please enter valid data before marking a question as complete.
 
 #Generic type mismatch errors
+typeMismatch.java.lang.BigInteger=This field can only accept whole numbers.
 typeMismatch.java.lang.Integer=This field can only accept whole numbers.
 typeMismatch.java.lang.Long=This field can only accept whole numbers.
 typeMismatch.int=This field can only accept whole numbers.
@@ -491,6 +492,7 @@ competition.setup.invalid.assessor.count=Invalid number of assessors
 competition.setup.invalid.comp.exec=The selected user is not a Portfolio Manager.
 competition.setup.invalid.comp.technologist=The selected user is not an Innovation Lead
 competition.management.limit.warning=Please filter to allow you to select all.
+competition.setup.applicationdetails.projectduration.min=This field should be 1 or higher.
 competition.setup.applicationdetails.max.projectduration.beneathmin=The maximum must be larger than the minimum.
 competition.setup.applicationdetails.min.projectduration.exceedsmax=The minimum must be smaller than the maximum.
 
