--- a/os-files/46-prototypes-service.yml
+++ b/os-files/46-prototypes-service.yml
@@ -48,7 +48,7 @@ items:
           - name: SPRING_APPLICATION_JSON
             value: '{"logout":{"url": "https://${SHIB_ADDRESS}/Logout/"}}'
           - name: JAVA_OPTS
-            value: -Xms1000m -Xmx1000m -javaagent:/newrelic.jar
+            value: -Xms300m -Xmx300m
           - name: NEW_RELIC_APP_NAME
             value: "ifs-prototypes-service (${openshiftEnv})"
           - name: NEW_RELIC_LICENSE_KEY
@@ -69,10 +69,10 @@ items:
           - containerPort: 8080
           resources:
             limits:
-              cpu: 1000m
+              cpu: 500m
             requests:
-              cpu: 100m
-              memory: 1G
+              cpu: 50m
+              memory: 300M
     test: false
     triggers:
     - type: ConfigChange
@@ -87,9 +87,6 @@ items:
     - name: 8080-tcp
       port: 8080
       targetPort: 8080
-    - name: 8009-tcp
-      port: 8009
-      targetPort: 8009
     selector:
       deploymentconfig: prototypes-svc
   status:
