--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ configure(subprojects - project(":ifs-auth-service")) {
 buildscript {
 
     ext {
-        springBootVersion = '1.5.11.BUILD-SNAPSHOT'
+        springBootVersion = '1.5.9.RELEASE'
         springCloudVersion = 'Dalston.RELEASE'
     }
 
@@ -51,7 +51,7 @@ buildscript {
         maven { url "http://dl.bintray.com/robfletcher/gradle-plugins" }
         maven { url "http://repo.spring.io/milestone" }
         maven { url "https://plugins.gradle.org/m2/" }
-        maven { url "https://repo.spring.io/snapshot" }
+
     }
 
     dependencies {
