--- a/gradle-support/versions.gradle
+++ b/gradle-support/versions.gradle
@@ -20,3 +20,5 @@ ext.mailSinkVersion = project.properties['mail-sink.version'] ?: project.version
 ext.mysqlClientVersion = project.properties['mysql-client.version'] ?: project.version
 
 ext.silStubVersion = project.properties['sil-stub.version'] ?: project.version
+
+ext['hibernate.version'] = '5.2.7.Final'
