--- a/ifs-web-service/ifs-prototypes-service/build.gradle
+++ b/ifs-web-service/ifs-prototypes-service/build.gradle
@@ -22,6 +22,10 @@ dependencies {
     // despite 3.0.1.RELEASE being specified explicitly in ifs-web-core's build.gradle
     compile "org.thymeleaf.extras:thymeleaf-extras-springsecurity4:3.0.1.RELEASE"
     compile "org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.0.RELEASE"
+
+    testCompile project(':ifs-resources').sourceSets.test.output
+    testCompile project(":ifs-commons").sourceSets.test.output
+    testCompile project(':ifs-web-service:ifs-web-core').sourceSets.test.output
 }
 
 
