--- a/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
@@ -61,6 +61,8 @@ ifs.data.service.rest.baseURL=http://data-service:8080
 
 ifs.data.company-house.url=https://api.companieshouse.gov.uk/
 ifs.data.company-house.key=${companyHouseKey}
+ifs.data.companies-house.lookup.enabled=${companiesHouseLookupEnabled}
+
 
 ifs.data.postcode-lookup.key=${postcodeLookupKey}
 ifs.data.postcode-lookup.url=http://ws.postcoder.com/pcw
