--- a/ifs-web-service/ifs-prototypes-service/src/main/resources/prototypesservice.properties
+++ b/ifs-web-service/ifs-prototypes-service/src/main/resources/prototypesservice.properties
@@ -3,3 +3,5 @@ spring.boot.admin.client.name=IFS Prototypes Service
 
 spring.boot.admin.client.service-url=http://prototypes-svc:8080
 info.version=${project.version}
+
+ifs.web.alertMessagesEnabled=false
