--- a/ifs-data-layer/data-service-commons/build.gradle
+++ b/ifs-data-layer/data-service-commons/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "org.apache.tika:tika-parsers:1.14"
+    compile "org.apache.httpcomponents:httpasyncclient"
     compile "org.mapstruct:mapstruct:1.0.0.Final"
     mapstruct "org.mapstruct:mapstruct-processor:1.0.0.Final"
 
