IFS-2891 Added extra properties for running without docker-compose

--- a/ifs-web-service/ifs-prototypes-service/src/main/resources/prototypesservice.properties
+++ b/ifs-web-service/ifs-prototypes-service/src/main/resources/prototypesservice.properties
@@ -5,3 +5,15 @@ spring.boot.admin.client.service-url=http://prototypes-svc:8080
 info.version=${project.version}
 
 ifs.web.alertMessagesEnabled=false
+
+createContainer.hostName="prototypes-svc"
+createContainer.containerName="prototypes-svc"
+createContainer.containerId="prototypes-svc"
+
+def enabled = project.hasProperty('ifs.prototypes.enabled') ? project.property('ifs.prototypes.enabled').toBoolean() : true
+stop.enabled = enabled
+removeContainer.enabled = enabled
+buildDocker.enabled = enabled
+createContainer.enabled = enabled
+deploy.enabled =enabled
+wait.enabled = enabled
