--- a/ifs-web-service/ifs-prototypes-service/build.gradle
+++ b/ifs-web-service/ifs-prototypes-service/build.gradle
@@ -16,7 +16,7 @@ createContainer.containerName="prototypes-svc"
 createContainer.containerId="prototypes-svc"
 createContainer.portBindings = ['1234:8080']
 
-def enabled = project.hasProperty('ifs.prototypes.enabled') ? project.property('ifs.prototypes.enabled').toBoolean() : true
+def enabled = project.hasProperty('ifs.prototypes.enabled') ? project.property('ifs.prototypes.enabled').toBoolean() : false
 stop.enabled = enabled
 removeContainer.enabled = enabled
 buildDocker.enabled = enabled
@@ -41,5 +41,14 @@ dependencies {
     testCompile project(':ifs-web-service:ifs-web-core').sourceSets.test.output
 }
 
+task startPrototypes(dependsOn: deploy) {
+    doLast {
+        exec {
+            //wait for container to start.
+            workingDir '.'
+            commandLine 'sleep', '10'
+        }
+    }
+}
 
 
